[package]
name = "rmdp"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.6.0"
serde_json = { version = "1.0.117", default-features = false, features = ["alloc"] }
ureq = { version = "2.9.7", default-features = false, features = ["json", "tls"] }
urlencoding = "2.1.3"


[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
strip = true
