[package]
name = "rmdp"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.6.1"
serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }
ureq = { version = "3.1.2", default-features = false, features = ["json", "rustls"] }
urlencoding = "2.1.3"


[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
strip = true
